# notebooks

./: .gitignore
data/: churn_clean.csv  cleaned_df.csv  diabetes.csv  metadata.csv  temperature_brazil.csv
ml_basics/: anomaly_detection.ipynb  decision_tree.ipynb  digit_recognition.ipynb  kmeans.ipynb  linear_regression.ipynb  logistic_regression.ipynb  multi_variable_linear_regression.ipynb  pyproject.toml
ml_basics/data/: X_part1.csv  X_part2.csv  X_val_part2.csv  y_val_part1.csv  y_val_part2.csv
old-recsys/: download.sh  recommendation_sys.ipynb  requirements.txt
old-tf-notebooks/: beginner_nn.ipynb  download.sh  requirements.txt
sklearn-workbench/: ensemble_techniques.ipynb  fmt.ipynb  pyproject.toml  supervised_learning.ipynb  unsupervised_learning.ipynb
stats/: pyproject.toml
