[project]
name = "ml-basics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "~=3.11"
dependencies = [
    "matplotlib==3.10.3",
    "pandas==2.2.3",
    "seaborn==0.13.2",
    "tensorflow-macos==2.16.2",
]

[dependency-groups]
dev = [
    "ipykernel==6.29.5",
    "jupyter==1.1.1",
    "nbformat==5.10.4",
]
