[project]
name = "sklearn-workbench"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "~=3.11"
dependencies = [
    "imblearn>=0.0",
    "matplotlib==3.10.3",
    "pandas==2.2.3",
    "scikit-learn==1.6.1",
    "scipy==1.15.3",
    "seaborn==0.13.2",
    "xgboost==3.0.2",
]

[dependency-groups]
dev = [
    "ipykernel==6.29.5",
    "jupyter==1.1.1",
    "nbformat==5.10.4",
]
